add failed_cases description, minor update on other files

--- a/notebooks/attrition_comprehensive.ipynb
+++ b/notebooks/attrition_comprehensive.ipynb
@@ -1003,7 +1003,7 @@
     "### Trial for user self-defined get dummny function\n",
     "Reference can be found at [here](https://runawayhorse001.github.io/LearningApacheSpark/pyspark.pdf).\n",
     "\n",
-    "This should work with *pyspark*; however, the error is currently beyond my level."
+    "This should work with *pyspark*; however, the error is currently beyond my level to solve."
    ]
   },
   {
@@ -1406,6 +1406,7 @@
     }
    ],
    "source": [
+    "# check fineness of feature_col\n",
     "len(ibm_train.columns), len(feature_col)"
    ]
   },
@@ -1499,6 +1500,18 @@
    "source": [
     "pipeline = Pipeline(stages = [dt])\n",
     "model = pipeline.fit(training_data)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "collapsed": true
+   },
+   "source": [
+    "### For this workbook, I stopped at here\n",
+    "First I thought this might just be some memory overflow problem as I indeed created too many table.\n",
+    "<br/>\n",
+    "Given this thought, I relocate my primary workbook at [here](attrition_simple.ipynb)"
    ]
   },
   {
