--- a/notebooks/attrition_final.ipynb
+++ b/notebooks/attrition_final.ipynb
@@ -1,6 +1,14 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Finallized workbook\n",
+    "The notebook will have a clear view on the pipeline of my work, though the data exploration and viz process have been cut out."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {
@@ -21,7 +29,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "spark is well set at 2018-08-01 12:01:52.591993\n"
+      "spark is well set at 2018-08-02 14:58:05.010911\n"
      ]
     }
    ],
@@ -67,7 +75,7 @@
        "        "
       ],
       "text/plain": [
-       "<pyspark.sql.session.SparkSession at 0x2667598d748>"
+       "<pyspark.sql.session.SparkSession at 0x2210f6fa748>"
       ]
      },
      "execution_count": 3,
@@ -145,7 +153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -154,7 +162,7 @@
        "(1470, 35)"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -166,7 +174,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -175,7 +183,7 @@
        "(7, 24)"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -193,8 +201,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Use pandas' join\n",
+    "As noted in the previous workbook: the spark join would cause problems that beyond my current reach, I decided to use join in pandas."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -368,7 +384,7 @@
        "[3 rows x 28 columns]"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -382,7 +398,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -433,7 +449,7 @@
        "2                    1"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -445,7 +461,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -604,7 +620,7 @@
        "[3 rows x 24 columns]"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -616,7 +632,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -678,7 +694,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -690,8 +706,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Prepare final dataset for training"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -767,7 +790,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -776,12 +799,13 @@
        "(52, 53)"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "# extract feature columns\n",
     "feature_col = ibm_hr_final.columns\n",
     "feature_col.remove(\"Attrition_numerical\")\n",
     "len(feature_col), len(ibm_hr_final.columns)"
@@ -789,7 +813,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -798,12 +822,13 @@
        "(1176, 294)"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "# import essiential libraries and prepare training and testing datasets\n",
     "from pyspark.ml import Pipeline\n",
     "from pyspark.ml.classification import DecisionTreeClassifier\n",
     "from pyspark.ml.feature import VectorAssembler, StringIndexer, VectorIndexer\n",
@@ -815,40 +840,51 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 15,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
+    "# get the decision tree\n",
     "dt = DecisionTreeClassifier(labelCol = \"Attrition_numerical\", featuresCol = \"features\", \\\n",
     "                           maxDepth = 7, minInstancesPerNode = 20, impurity = \"gini\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 16,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
+    "# train and get the model\n",
     "pipeline = Pipeline(stages = [dt])\n",
     "model = pipeline.fit(training_data)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
-   "metadata": {},
+   "execution_count": 17,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "predictions = model.transform(testing_data)"
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Evaluating the results"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -857,7 +893,7 @@
        "DataFrame[Age: int, DailyRate: int, DistanceFromHome: int, Education: int, EmployeeNumber: int, EnvironmentSatisfaction: int, HourlyRate: int, JobInvolvement: int, JobLevel: int, JobSatisfaction: int, MonthlyIncome: int, MonthlyRate: int, NumCompaniesWorked: int, PercentSalaryHike: int, PerformanceRating: int, RelationshipSatisfaction: int, StockOptionLevel: int, TotalWorkingYears: int, TrainingTimesLastYear: int, WorkLifeBalance: int, YearsAtCompany: int, YearsInCurrentRole: int, YearsSinceLastPromotion: int, YearsWithCurrManager: int, BusinessTravel_Non-Travel: int, BusinessTravel_Travel_Frequently: int, BusinessTravel_Travel_Rarely: int, Department_Human Resources: int, Department_Research & Development: int, Department_Sales: int, EducationField_Human Resources: int, EducationField_Life Sciences: int, EducationField_Marketing: int, EducationField_Medical: int, EducationField_Other: int, EducationField_Technical Degree: int, Gender_Female: int, Gender_Male: int, JobRole_Healthcare Representative: int, JobRole_Human Resources: int, JobRole_Laboratory Technician: int, JobRole_Manager: int, JobRole_Manufacturing Director: int, JobRole_Research Director: int, JobRole_Research Scientist: int, JobRole_Sales Executive: int, JobRole_Sales Representative: int, MaritalStatus_Divorced: int, MaritalStatus_Married: int, MaritalStatus_Single: int, OverTime_No: int, OverTime_Yes: int, Attrition_numerical: int, features: vector, rawPrediction: vector, probability: vector, prediction: double]"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -868,7 +904,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -900,7 +936,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
