--- a/files/report.tex
+++ b/files/report.tex
@@ -69,12 +69,12 @@
     the following ways, please think twice before your proceed. As I'm a primarily Windows user, many of 
     my attempts are associated with Windows.
     \begin{itemize}
-        \item [Windows] Jupyter scala kernel with spark
-        \item [Windows] Spark-notebook
-        \item [Windows] Windows Ubuntu subsystem
-        \item [Windows] Run zeppelin locally
-        \item [Windows] Jupyter notebook with Toree kernel
-        \item [Ubuntu] Jupyter notebook with Toree kernel
+        \item Windows Jupyter scala kernel with spark
+        \item Windows Spark-notebook
+        \item Windows Windows Ubuntu subsystem
+        \item Windows Run zeppelin locally
+        \item Windows Jupyter notebook with Toree kernel
+        \item Ubuntu Jupyter notebook with Toree kernel
     \end{itemize}
     
     \section*{Introduction to Spark Usage (on Jupyter)}
